--- a/reports/financialReport.jrxml
+++ b/reports/financialReport.jrxml
@@ -6,8 +6,8 @@
 	<parameter name="clinic" class="br.com.easyclinica.domain.entities.Clinic" isForPrompting="false"/>
 	<parameter name="start" class="java.util.Calendar" isForPrompting="false"/>
 	<parameter name="end" class="java.util.Calendar" isForPrompting="false"/>
-	<parameter name="doctor" class="br.com.easyclinica.domain.entities.Doctor" isForPrompting="false"/>
-	<parameter name="plan" class="br.com.easyclinica.domain.entities.HealthCarePlan"/>
+	<parameter name="doctor" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="plan" class="java.lang.String"/>
 	<field name="appointmentDate" class="java.util.Calendar"/>
 	<field name="patient" class="br.com.easyclinica.domain.entities.Patient"/>
 	<field name="doctor" class="br.com.easyclinica.domain.entities.Doctor"/>
@@ -32,7 +32,7 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="75" splitType="Stretch">
+		<band height="59" splitType="Stretch">
 			<textField evaluationTime="Auto">
 				<reportElement x="150" y="12" width="102" height="20"/>
 				<textElement/>
@@ -44,14 +44,14 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd/MM/yyyy").format($P{end}.getTime())]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Auto">
-				<reportElement x="508" y="45" width="216" height="20"/>
+				<reportElement x="508" y="32" width="216" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{doctor}.name]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{doctor}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Auto">
-				<reportElement x="152" y="45" width="184" height="20"/>
+				<reportElement x="150" y="32" width="184" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{plan}.name]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{plan}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="28" y="12" width="100" height="20"/>
@@ -68,14 +68,14 @@
 				<text><![CDATA[Data de Fim:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="28" y="45" width="100" height="20"/>
+				<reportElement x="28" y="32" width="100" height="20"/>
 				<textElement textAlignment="Right">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Convênio:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="384" y="45" width="100" height="20"/>
+				<reportElement x="384" y="32" width="100" height="20"/>
 				<textElement textAlignment="Right">
 					<font isBold="true"/>
 				</textElement>
@@ -197,25 +197,19 @@
 		</band>
 	</pageFooter>
 	<summary>
-		<band height="30" splitType="Stretch">
+		<band height="23" splitType="Stretch">
 			<staticText>
-				<reportElement x="555" y="8" width="100" height="20"/>
+				<reportElement x="555" y="0" width="100" height="20"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Valor Total:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="672" y="8" width="100" height="20"/>
+				<reportElement x="672" y="0" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$V{total}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement x="0" y="3" width="802" height="1"/>
-				<graphicElement>
-					<pen lineWidth="2.0"/>
-				</graphicElement>
-			</line>
 		</band>
 	</summary>
 </jasperReport>
