--- a/reports/receipt.jrxml
+++ b/reports/receipt.jrxml
@@ -5,60 +5,60 @@
 	<property name="ireport.y" value="0"/>
 	<parameter name="receipt" class="br.com.easyclinica.domain.entities.Receipt" isForPrompting="false"/>
 	<parameter name="clinic" class="br.com.easyclinica.domain.entities.Clinic" isForPrompting="false"/>
-	<variable name="clinicName" class="java.lang.String">
-		<variableExpression><![CDATA[$P{clinic}.getName()]]></variableExpression>
+	<variable name="amount" class="java.lang.String">
+		<variableExpression><![CDATA[java.text.NumberFormat.getCurrencyInstance().format($P{receipt}.amount)]]></variableExpression>
 	</variable>
-	<variable name="receiptDate" class="java.lang.String">
-		<variableExpression><![CDATA[new SimpleDateFormat("dd/MM/yyyy").format($P{receipt}.getDate().getTime())]]></variableExpression>
+	<variable name="extenso" class="java.lang.String">
+		<variableExpression><![CDATA[new br.com.caelum.stella.inwords.NumericToWordsConverter(new br.com.caelum.stella.inwords.FormatoDeReal()).toWords($P{receipt}.amount.doubleValue())]]></variableExpression>
 	</variable>
-	<variable name="receiptInNameOF" class="java.lang.String">
-		<variableExpression><![CDATA[$P{receipt}.getInNameOf()]]></variableExpression>
+	<variable name="receiptData" class="java.lang.String">
+		<variableExpression><![CDATA["São Paulo, " + new SimpleDateFormat("dd MMMMM yyyy").format($P{receipt}.date.getTime()) ]]></variableExpression>
+	</variable>
+	<variable name="texto" class="java.lang.String">
+		<variableExpression><![CDATA["Recebemos de " + $P{receipt}.inNameOf + ", número de CPF " + $P{receipt}.cpf+", a importância de " + $V{amount} + "(" + $V{extenso} + ") referente a serviços médicos prestados."]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
-			<textField evaluationTime="Auto">
-				<reportElement x="235" y="12" width="100" height="20"/>
+		<band height="36" splitType="Stretch">
+			<textField>
+				<reportElement x="0" y="0" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$V{clinicName}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.name]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch"/>
+		<band height="13" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch"/>
+		<band height="8" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch">
+		<band height="118" splitType="Stretch">
 			<textField>
-				<reportElement x="20" y="17" width="100" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$V{receiptInNameOF}]]></textFieldExpression>
+				<reportElement x="296" y="98" width="243" height="20"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$V{receiptData}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="20" y="47" width="100" height="20"/>
+				<reportElement x="11" y="10" width="528" height="53"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$V{receiptDate}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$V{texto}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="306" y="92" width="223" height="1"/>
+			</line>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band height="17" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch">
-			<textField>
-				<reportElement x="440" y="34" width="100" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="10" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="14" splitType="Stretch"/>
 	</summary>
 </jasperReport>
