Observacoes no recibo

--- a/reports/receipt.jrxml
+++ b/reports/receipt.jrxml
@@ -30,15 +30,23 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="13" splitType="Stretch"/>
+		<band height="23" splitType="Stretch">
+			<staticText>
+				<reportElement x="229" y="3" width="100" height="20"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[RECIBO]]></text>
+			</staticText>
+		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="8" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="118" splitType="Stretch">
+		<band height="162" splitType="Stretch">
 			<textField>
-				<reportElement x="296" y="98" width="243" height="20"/>
+				<reportElement x="296" y="135" width="243" height="20"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$V{receiptData}]]></textFieldExpression>
 			</textField>
@@ -48,8 +56,13 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$V{texto}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="306" y="92" width="223" height="1"/>
+				<reportElement x="306" y="129" width="223" height="1"/>
 			</line>
+			<textField>
+				<reportElement x="11" y="74" width="528" height="39"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{receipt}.observations]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
