--- a/reports/atestadoDeSaudeOcupacional.jrxml
+++ b/reports/atestadoDeSaudeOcupacional.jrxml
@@ -2,31 +2,186 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="atestadoDeSaudeOcupacional" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="121"/>
 	<parameter name="clinic" class="br.com.easyclinica.domain.entities.Clinic" isForPrompting="false"/>
-	<parameter name="patient" class="br.com.easyclinica.domain.entities.Patient" isForPrompting="false"/>
+	<field name="name" class="java.lang.String"/>
+	<field name="rg" class="java.lang.String"/>
+	<field name="birthDate" class="java.util.Calendar"/>
+	<field name="profession" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch"/>
+		<band height="60" splitType="Stretch">
+			<textField>
+				<reportElement x="0" y="0" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.name]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="0" y="36" width="555" height="20"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ATESTADO DE SAÚDE OCUPACIONAL]]></text>
+			</staticText>
+		</band>
 	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch"/>
+		<band height="667" splitType="Stretch">
+			<textField>
+				<reportElement x="0" y="0" width="555" height="67"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["Em cumprimento ao disposto nos artigos 168 e 169 do capítulo V da Consolidação das Leis do Trabalho (C.L.T.), e com a redação dada pelas Leis 7.855 de 24/10/1989 e 6.514 de 22/12/1977 e pelas portarias 3.214 de 08/06/1978 e nº 24 de 29/12/1994 do Ministério do trabalho (Normas Regulamentadoras relativas à Segurança e Medicina do Trabalho), atestamos que o Sr(a).:"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="58" y="74" width="497" height="19"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{name} + ","]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="58" y="93" width="497" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["portador da Carteira de Identidade RG nº " + $F{rg} + ","]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="58" y="113" width="497" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["nascido em " + new SimpleDateFormat("dd/MM/yyyy").format($F{birthDate}.time) + "," ]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="144" width="555" height="38"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["foi examinado nesta data, sendo constatado que está ( ) apto ( ) inapto para exercer a função de " + $F{profession} + "."]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="215" width="555" height="21"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["( ) admissional  ( ) periódico  ( ) demissional  ( ) de retorno ao trabalho  ( ) de mudança de função"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="195" width="112" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["Exame Clínico:"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="251" width="555" height="22"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["Procedimentos médicos e exames complementares que foi submetido:"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="285" width="555" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["( ) Exame Clínico Geral:"]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="283" width="555" height="1"/>
+			</line>
+			<line>
+				<reportElement x="0" y="305" width="555" height="1"/>
+			</line>
+			<textField>
+				<reportElement x="0" y="306" width="555" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["( ) Exame Fonoaudiológico:"]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="327" width="555" height="1"/>
+			</line>
+			<line>
+				<reportElement x="1" y="349" width="555" height="1"/>
+			</line>
+			<textField>
+				<reportElement x="1" y="329" width="555" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["( ) Exame Psicológico:"]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="371" width="555" height="1"/>
+			</line>
+			<textField>
+				<reportElement x="0" y="391" width="144" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA["Observações Gerais:"]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="1" y="429" width="555" height="1"/>
+			</line>
+			<line>
+				<reportElement x="1" y="453" width="555" height="1"/>
+			</line>
+			<line>
+				<reportElement x="0" y="478" width="555" height="1"/>
+			</line>
+			<line>
+				<reportElement x="0" y="505" width="555" height="1"/>
+			</line>
+			<textField>
+				<reportElement x="0" y="534" width="555" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("'São Paulo,' dd 'de' MMMM 'de' yyyy").format(Calendar.getInstance().getTime())]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="1" y="616" width="238" height="1"/>
+			</line>
+			<line>
+				<reportElement x="317" y="615" width="238" height="1"/>
+			</line>
+			<staticText>
+				<reportElement x="1" y="617" width="238" height="20"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
+				</textElement>
+				<text><![CDATA[Autorização do Examinador]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="317" y="615" width="238" height="20"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
+				</textElement>
+				<text><![CDATA[Médico Examinador]]></text>
+			</staticText>
+		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</summary>
 </jasperReport>
