mudando projeto para o root; acertando css; colocando var env para falar se eh prod ou nao pq c3p0 enche o saco em dev

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -7,7 +7,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/integration-test/java"/>
-<property name="context-root" value="easyclinica"/>
 <property name="java-output-path"/>
+        <property name="context-root" value="/"/>
 </wb-module>
 </project-modules>
