--- a/reports/financialByHealthCarePlanReport.jrxml
+++ b/reports/financialByHealthCarePlanReport.jrxml
@@ -24,7 +24,9 @@
 		<band height="79" splitType="Stretch">
 			<textField evaluationTime="Auto">
 				<reportElement x="0" y="0" width="100" height="20"/>
-				<textElement/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.name]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Auto" isBlankWhenNull="true">
