--- a/reports/atestadoDeSaudeOcupacional.jrxml
+++ b/reports/atestadoDeSaudeOcupacional.jrxml
@@ -15,39 +15,39 @@
 	<title>
 		<band height="104" splitType="Stretch">
 			<staticText>
-				<reportElement x="1" y="81" width="555" height="20"/>
+				<reportElement x="1" y="74" width="555" height="20"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[ATESTADO DE SAÚDE OCUPACIONAL]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="1" width="555" height="20"/>
-				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.name]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="0" y="21" width="555" height="20"/>
+				<reportElement x="1" y="34" width="555" height="16"/>
 				<textElement textAlignment="Center">
 					<font size="10"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.address.street + " - " + $P{clinic}.address.neighborhood]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.address.postalCode + " - " + $P{clinic}.address.city + "/" + $P{clinic}.address.state]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="61" width="555" height="20"/>
+				<reportElement x="1" y="50" width="555" height="16"/>
 				<textElement textAlignment="Center">
 					<font size="10"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.telephone + " " + $P{clinic}.website]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="41" width="555" height="20"/>
+				<reportElement x="1" y="2" width="555" height="16"/>
+				<textElement textAlignment="Center">
+					<font size="10" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.name]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="1" y="18" width="555" height="16"/>
 				<textElement textAlignment="Center">
 					<font size="10"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.address.postalCode + " - " + $P{clinic}.address.city + "/" + $P{clinic}.address.state]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.address.street + " - " + $P{clinic}.address.neighborhood]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
@@ -168,7 +168,7 @@
 				<textElement>
 					<font size="12"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("'São Paulo,' dd 'de' MMMM 'de' yyyy").format(Calendar.getInstance().getTime())]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.address.city + ", " + new SimpleDateFormat("dd 'de' MMMM 'de' yyyy", new Locale("pt", "br")).format(Calendar.getInstance().getTime())]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="1" y="616" width="238" height="1"/>
