--- a/reports/receipt.jrxml
+++ b/reports/receipt.jrxml
@@ -12,7 +12,7 @@
 		<variableExpression><![CDATA[new br.com.caelum.stella.inwords.NumericToWordsConverter(new br.com.caelum.stella.inwords.FormatoDeReal()).toWords($P{receipt}.amount.doubleValue())]]></variableExpression>
 	</variable>
 	<variable name="receiptData" class="java.lang.String">
-		<variableExpression><![CDATA["São Paulo, " + new SimpleDateFormat("dd MMMMM yyyy").format($P{receipt}.date.getTime())]]></variableExpression>
+		<variableExpression><![CDATA[$P{clinic}.address.city + ", " + new SimpleDateFormat("dd 'de' MMMMM 'de' yyyy", new Locale("pt", "br")).format($P{receipt}.date.getTime())]]></variableExpression>
 	</variable>
 	<variable name="texto" class="java.lang.String">
 		<variableExpression><![CDATA["Recebemos de " + $P{receipt}.inNameOf + ", portador do CPF " + $P{receipt}.cpf+", a importância de " + $V{amount} + "(" + $V{extenso} + ") referente a serviços médicos prestados."]]></variableExpression>
@@ -20,81 +20,61 @@
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="80" splitType="Stretch">
+	<detail>
+		<band height="252" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="555" height="20"/>
-				<textElement textAlignment="Center">
-					<font size="10" isBold="true"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.name]]></textFieldExpression>
+				<reportElement x="12" y="176" width="528" height="39"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{receipt}.observations]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="20" width="555" height="20"/>
+				<reportElement x="297" y="228" width="243" height="20"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$V{receiptData}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="12" y="112" width="528" height="53"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$V{texto}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="307" y="222" width="223" height="1"/>
+			</line>
+			<staticText>
+				<reportElement x="0" y="78" width="555" height="20"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[RECIBO]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="0" y="36" width="555" height="16"/>
 				<textElement textAlignment="Center">
 					<font size="10"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.address.street + " - " + $P{clinic}.address.neighborhood]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.address.postalCode + " - " + $P{clinic}.address.city + "/" + $P{clinic}.address.state]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="60" width="555" height="20"/>
+				<reportElement x="0" y="52" width="555" height="16"/>
 				<textElement textAlignment="Center">
 					<font size="10"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.telephone + " " + $P{clinic}.website]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="40" width="555" height="20"/>
+				<reportElement x="0" y="4" width="555" height="16"/>
+				<textElement textAlignment="Center">
+					<font size="10" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.name]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="20" width="555" height="16"/>
 				<textElement textAlignment="Center">
 					<font size="10"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.address.postalCode + " - " + $P{clinic}.address.city + "/" + $P{clinic}.address.state]]></textFieldExpression>
-			</textField>
-		</band>
-	</title>
-	<pageHeader>
-		<band height="23" splitType="Stretch">
-			<staticText>
-				<reportElement x="229" y="3" width="100" height="20"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
-				</textElement>
-				<text><![CDATA[RECIBO]]></text>
-			</staticText>
-		</band>
-	</pageHeader>
-	<columnHeader>
-		<band height="8" splitType="Stretch"/>
-	</columnHeader>
-	<detail>
-		<band height="162" splitType="Stretch">
-			<textField>
-				<reportElement x="296" y="135" width="243" height="20"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$V{receiptData}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="11" y="10" width="528" height="53"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$V{texto}]]></textFieldExpression>
-			</textField>
-			<line>
-				<reportElement x="306" y="129" width="223" height="1"/>
-			</line>
-			<textField>
-				<reportElement x="11" y="74" width="528" height="39"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{receipt}.observations]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.address.street + " - " + $P{clinic}.address.neighborhood]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="17" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="10" splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band height="14" splitType="Stretch"/>
-	</summary>
 </jasperReport>
